--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src='spectrum.js'></script>
-<link rel='stylesheet' href='spectrum.css' />
+<script src="http://bgrins.github.com/spectrum/spectrum.js"></script>
+<link rel="stylesheet" type="text/css" href="http://bgrins.github.com/spectrum/spectrum.css">
 </head>
 
 <input type='text' id="flat" />
