drag coefficient picture

--- a/body_calculator.html
+++ b/body_calculator.html
@@ -68,6 +68,7 @@
 		Aproximate direction change time
 		<div id="DirectionChangeTime" class="detail">1s</div>
 	</div>
+	<img class="ui bordered image" src="assets/drag_coefficient.png">
 </body>
 <script>
 	$('input').change(function() {
