--- a/body_calculator.html
+++ b/body_calculator.html
@@ -68,7 +68,9 @@
 		Aproximate direction change time
 		<div id="DirectionChangeTime" class="detail">1s</div>
 	</div>
-	<img class="ui bordered image" src="assets/drag_coefficient.png">
+	<div class="ui image">
+		<image src="assets/drag_coefficient.svg" width="100%" height="100%"></image>
+	</div>
 </body>
 <script>
 	$('input').change(function() {
