--- a/draft.html
+++ b/draft.html
@@ -36,7 +36,6 @@
 					</div>
 				</div>
 			</div>
-
 			<div class="ui card">
 				<a class="image" href="https://www.youtube.com/watch?v=MMWn4btduJE&feature=youtu.be&t=147">
 					<img src="assets/draft/homeworld.jpg">
@@ -46,7 +45,6 @@
 					<div class="description">Very nice trails, particles and models</div>
 				</div>
 			</div>
-
 			<div class="ui card">
 				<a class="image" href="https://www.youtube.com/watch?v=SZLI8hBSWsM&feature=youtu.be&t=1426">
 					<img src="assets/draft/planetary_annihilation.jpg">
@@ -56,9 +54,15 @@
 					<div class="description">Simple explosions and models</div>
 				</div>
 				<div class="content">
-					<a href="https://forums.uberent.com/threads/reference-models-textures.48081/">
-						<i class="right triangle icon"></i>Assets
-					</a>
+					<div class="ui list">
+						<div class="item">
+							<i class="right triangle icon"></i>
+							<div class="content">
+								<a class="header" href="https://forums.uberent.com/threads/reference-models-textures.48081/">Assets</a>
+								<div class="description">How to prepare model and textures</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="ui card">
