examples and backed up technique

--- a/draft.html
+++ b/draft.html
@@ -15,28 +15,6 @@
 		<h2 class="ui dividing header">Examples</h2>
 		<div class="ui cards">
 			<div class="ui card">
-				<a class="image" href="https://sketchfab.com/models/e1ced58558644f4d809cd9c5bcb9ae35">
-					<img src="assets/draft/sketchfab.jpg">
-				</a>
-				<div class="content">
-					<div class="header">Sketchfab</div>
-					<div class="description">Very fancy and a little too detailed models</div>
-				</div>
-				<div class="content">
-					<div class="ui list">
-						<a class="item" href="https://sketchfab.com/models/d0b645b4e2c34593a18f6f74007acbe4">
-							<i class="right triangle icon"></i>Bike
-						</a>
-						<a class="item" href="https://sketchfab.com/models/2252074086884ec2bd3f50c024719a11">
-							<i class="right triangle icon"></i>Destroyer
-						</a>
-						<a class="item" href="https://sketchfab.com/models/3f0d135291f84eb3a56b6857b67c9c6d">
-							<i class="right triangle icon"></i>Gunship
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="ui card">
 				<a class="image" href="https://www.youtube.com/watch?v=MMWn4btduJE&feature=youtu.be&t=147">
 					<img src="assets/draft/homeworld.jpg">
 				</a>
@@ -79,7 +57,76 @@
 					</a>
 				</div>
 			</div>
+			<div class="ui card">
+				<a class="image" href="https://sketchfab.com/models/e1ced58558644f4d809cd9c5bcb9ae35">
+					<img src="assets/draft/sketchfab.jpg">
+				</a>
+				<div class="content">
+					<div class="header">Sketchfab</div>
+					<div class="description">Very fancy and a little too detailed models</div>
+				</div>
+				<div class="content">
+					<div class="ui list">
+						<a class="item" href="https://sketchfab.com/models/d0b645b4e2c34593a18f6f74007acbe4">
+							<i class="right triangle icon"></i>Bike
+						</a>
+						<a class="item" href="https://sketchfab.com/models/2252074086884ec2bd3f50c024719a11">
+							<i class="right triangle icon"></i>Destroyer
+						</a>
+						<a class="item" href="https://sketchfab.com/models/3f0d135291f84eb3a56b6857b67c9c6d">
+							<i class="right triangle icon"></i>Gunship
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="ui card">
+				<a class="image" href="https://youtu.be/grXkzisSEM4?t=3963">
+					<img src="assets/draft/raptor.jpg">
+				</a>
+				<div class="content">
+					<div class="header">Raptor: Call of the Shadows</div>
+					<div class="description">Art style, ship designs and particles</div>
+				</div>
+			</div>
+			<div class="ui card">
+				<a class="image" href="https://youtu.be/Cv1Y0QdcXxw?t=5908">
+					<img src="assets/draft/ugh.jpg">
+				</a>
+				<div class="content">
+					<div class="header">UGH!</div>
+					<div class="description">Great fluid pixel art animations</div>
+				</div>
+			</div>
+			<div class="ui card">
+				<a class="image" href="https://www.youtube.com/watch?v=BxAdOQtAFEs">
+					<img src="assets/draft/total_annihilation.jpg">
+				</a>
+				<div class="content">
+					<div class="header">Total Annihilation</div>
+					<div class="description">Classic. Simple low poly models</div>
+				</div>
+			</div>
+			<div class="ui card">
+				<a class="image" href="https://youtu.be/Ss6B9PLZYVo?t=507">
+					<img src="assets/draft/skyforce.jpg">
+				</a>
+				<div class="content">
+					<div class="header">Skyforce</div>
+					<div class="description">Mobile beauty</div>
+				</div>
+			</div>
 		</div>
 		<h2 class="ui dividing header">Techniques</h2>
+		<div class="ui cards">
+			<div class="ui card">
+				<a class="image" href="assets/third_party/explosion.html"">
+					<img src="assets/third_party/explosion_files/fig1.png">
+				</a>
+				<div class="content">
+					<div class="header">Explosions</div>
+					<div class="description">Detailed article on how to make explosions</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
