--- a/draft.html
+++ b/draft.html
@@ -127,6 +127,22 @@
 					<div class="description">Detailed article on how to make explosions</div>
 				</div>
 			</div>
+			<div class="ui card">
+				<a class="image" href="http://labs.gooengine.com/pearl-boy/index.html#">
+					<img src="assets/draft/water.jpg">
+				</a>
+				<div class="content">
+					<div class="ui list">
+						<div class="item">
+							<i class="right triangle icon"></i>
+							<div class="content">
+								<a class="header" href="assets/third_party/water.html">Tutorial</a>
+								<div class="description">Implementation details</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
