--- a/draft.html
+++ b/draft.html
@@ -115,6 +115,24 @@
 					<div class="description">Mobile beauty</div>
 				</div>
 			</div>
+			<div class="ui card">
+				<a class="image" href="https://youtu.be/3tmDyoJGRag?t=29">
+					<img src="assets/draft/rive.jpg">
+				</a>
+				<div class="content">
+					<div class="header">RIVE</div>
+					<div class="description">Simple 2D particles</div>
+				</div>
+			</div>
+			<div class="ui card">
+				<a class="image" href="https://www.youtube.com/watch?v=lQ6BZo1rKNo">
+					<img src="assets/draft/unity_assets.jpg">
+				</a>
+				<div class="content">
+					<div class="header">Unity</div>
+					<div class="description">Nice particle textures</div>
+				</div>
+			</div>
 		</div>
 		<h2 class="ui dividing header">Techniques</h2>
 		<div class="ui cards">
