--- a/draft.html
+++ b/draft.html
@@ -133,11 +133,20 @@
 					<div class="description">Nice particle textures</div>
 				</div>
 			</div>
+			<div class="ui card">
+				<a class="image" href="assets/third_party/moo.html">
+					<img src="assets/draft/master_of_orion.gif">
+				</a>
+				<div class="content">
+					<div class="header">Master of Orion</div>
+					<div class="description">Ship designes diversity</div>
+				</div>
+			</div>
 		</div>
 		<h2 class="ui dividing header">Techniques</h2>
 		<div class="ui cards">
 			<div class="ui card">
-				<a class="image" href="assets/third_party/explosion.html"">
+				<a class="image" href="assets/third_party/explosion.html">
 					<img src="assets/third_party/explosion_files/fig1.png">
 				</a>
 				<div class="content">
