--- a/draft.html
+++ b/draft.html
@@ -7,10 +7,10 @@
 	<div class="ui segment">
 		<h1 class="ui header">
 			<i class="Settings icon"></i>
-			<div class="content">
-				Draft
-				<div class="sub header">subtitle</div>
-			</div>
+			<a class="content" href="https://github.com/dachuto/ApkaRelease">
+				Release
+				<div class="sub header">test</div>
+			</a>
 		</h1>
 		<h2 class="ui dividing header">Examples</h2>
 		<div class="ui cards">
