--- a/index.html
+++ b/index.html
@@ -1,66 +1,26 @@
 <head>
-
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+	<link rel="import" href="include.html">
+	<link rel="stylesheet" href="import.css"/>
 </head>
 <body>
-		<div class="ui page grid">
-			<div class="four wide column">
-				<a class="ui fluid card" href="picker.html">
-					<div class="image">
-						<img src="assets/colorwheel.jpg">
-					</div>
-					<div class="content">
-						<div class="header">Color Picker</div>
-					</div>
-				</a>
+	<div class="ui vertical labeled icon menu">
+		<a class="item" href="body_calculator.html">
+			<i class="calculator icon"></i>
+			Drag calculator
+		</a>
+		<a class="item" href="picker.html">
+			<div class="ui vertical segment">
+				<i class="red paint brush icon"></i>
+				<i class="yellow paint brush icon"></i>
+				<i class="green paint brush icon"></i>
+				<i class="blue paint brush icon"></i>
 			</div>
-			<div class="four wide column">
-				<div class="ui fluid card">
-					<div class="image">
-						<img src="assets/colorwheel.jpg">
-					</div>
-					<div class="content">
-						<a class="header">Dupa</a>
-					</div>
-				</div>
-			</div>
-	
-						<div class="four wide column">
-				<div class="ui fluid card">
-					<div class="image">
-						<img src="assets/colorwheel.jpg">
-					</div>
-					<div class="content">
-						<a class="header">Zbita</a>
-					</div>
-				</div>
-			</div>
-						<div class="four wide column">
-				<div class="ui fluid card">
-					<div class="image">
-						<img src="assets/colorwheel.jpg">
-					</div>
-					<div class="content">
-						<a class="header">Zbita</a>
-					</div>
-				</div>
-			</div>
-					<div class="sixteen wide column">
-				<div class="ui fluid card">
-					<div class="image">
-						<img src="assets/colorwheel.jpg">
-					</div>
-					<div class="content">
-						<a class="header">Zbita</a>
-					</div>
-				</div>
-			</div>
-		</div>
+			Color picker
+		</a>
+		<a class="item" href="draft.html">
+			<i class="big red share icon"></i>
+			Apk
+		</a>
+	</div>
 </body>
