--- a/draft.html
+++ b/draft.html
@@ -1,171 +1,174 @@
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-<link rel="import" href="include.html">
-<link rel="stylesheet" href="import.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<link rel="import" href="include.html">
+	<link rel="stylesheet" href="import.css" />
 </head>
 <body>
-	<div class="ui segment">
-		<h1 class="ui header">
-			<i class="Settings icon"></i>
-			<a class="content" href="https://github.com/dachuto/ApkaRelease">
-				Release
-				<div class="sub header">test</div>
+	<h1 class="ui center aligned header">
+		<a class="content" href="https://github.com/dachuto/ApkaRelease">
+			<i class="big download icon"></i>
+			Download latest release
+		</a>
+	</h1>
+	<h2 class="ui horizontal divider header">
+		<i class="tag icon"></i>
+		Visual examples
+	</h2>
+	<div class="ui cards">
+		<div class="ui card">
+			<a class="image" href="https://www.youtube.com/watch?v=MMWn4btduJE&feature=youtu.be&t=147">
+				<img src="assets/draft/homeworld.jpg">
 			</a>
-		</h1>
-		<h2 class="ui dividing header">Examples</h2>
-		<div class="ui cards">
-			<div class="ui card">
-				<a class="image" href="https://www.youtube.com/watch?v=MMWn4btduJE&feature=youtu.be&t=147">
-					<img src="assets/draft/homeworld.jpg">
-				</a>
-				<div class="content">
-					<div class="header">Homeworld</div>
-					<div class="description">Very nice trails, particles and models</div>
-				</div>
+			<div class="content">
+				<div class="header">Homeworld</div>
+				<div class="description">Very nice trails, particles and models</div>
 			</div>
-			<div class="ui card">
-				<a class="image" href="https://www.youtube.com/watch?v=SZLI8hBSWsM&feature=youtu.be&t=1426">
-					<img src="assets/draft/planetary_annihilation.jpg">
-				</a>
-				<div class="content">
-					<div class="header">Planetary Annihilation</div>
-					<div class="description">Simple explosions and models</div>
-				</div>
-				<div class="content">
-					<div class="ui list">
-						<div class="item">
-							<i class="right triangle icon"></i>
-							<div class="content">
-								<a class="header" href="https://forums.uberent.com/threads/reference-models-textures.48081/">Assets</a>
-								<div class="description">How to prepare model and textures</div>
-							</div>
+		</div>
+		<div class="ui card">
+			<a class="image" href="https://www.youtube.com/watch?v=SZLI8hBSWsM&feature=youtu.be&t=1426">
+				<img src="assets/draft/planetary_annihilation.jpg">
+			</a>
+			<div class="content">
+				<div class="header">Planetary Annihilation</div>
+				<div class="description">Simple explosions and models</div>
+			</div>
+			<div class="content">
+				<div class="ui list">
+					<div class="item">
+						<i class="right triangle icon"></i>
+						<div class="content">
+							<a class="header" href="https://forums.uberent.com/threads/reference-models-textures.48081/">Assets</a>
+							<div class="description">How to prepare model and textures</div>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="ui card">
-				<a class="image" href="https://www.youtube.com/watch?v=JJp1S74xwmo#t=484">
-					<img src="assets/draft/rbs.jpg">
+		</div>
+		<div class="ui card">
+			<a class="image" href="https://www.youtube.com/watch?v=JJp1S74xwmo#t=484">
+				<img src="assets/draft/rbs.jpg">
+			</a>
+			<div class="content">
+				<div class="header">Really Big Sky</div>
+				<div class="description">Juicy particles in very simple game</div>
+			</div>
+			<div class="content">
+				<a href="https://www.youtube.com/watch?v=JJp1S74xwmo#t=679">
+					<i class="right triangle icon"></i>Explosion
 				</a>
-				<div class="content">
-					<div class="header">Really Big Sky</div>
-					<div class="description">Juicy particles in very simple game</div>
-				</div>
-				<div class="content">
-					<a href="https://www.youtube.com/watch?v=JJp1S74xwmo#t=679">
-						<i class="right triangle icon"></i>Explosion
+			</div>
+		</div>
+		<div class="ui card">
+			<a class="image" href="https://sketchfab.com/models/e1ced58558644f4d809cd9c5bcb9ae35">
+				<img src="assets/draft/sketchfab.jpg">
+			</a>
+			<div class="content">
+				<div class="header">Sketchfab</div>
+				<div class="description">Very fancy and a little too detailed models</div>
+			</div>
+			<div class="content">
+				<div class="ui list">
+					<a class="item" href="https://sketchfab.com/models/d0b645b4e2c34593a18f6f74007acbe4">
+						<i class="right triangle icon"></i>Bike
+					</a>
+					<a class="item" href="https://sketchfab.com/models/2252074086884ec2bd3f50c024719a11">
+						<i class="right triangle icon"></i>Destroyer
+					</a>
+					<a class="item" href="https://sketchfab.com/models/3f0d135291f84eb3a56b6857b67c9c6d">
+						<i class="right triangle icon"></i>Gunship
 					</a>
 				</div>
 			</div>
-			<div class="ui card">
-				<a class="image" href="https://sketchfab.com/models/e1ced58558644f4d809cd9c5bcb9ae35">
-					<img src="assets/draft/sketchfab.jpg">
-				</a>
-				<div class="content">
-					<div class="header">Sketchfab</div>
-					<div class="description">Very fancy and a little too detailed models</div>
-				</div>
-				<div class="content">
-					<div class="ui list">
-						<a class="item" href="https://sketchfab.com/models/d0b645b4e2c34593a18f6f74007acbe4">
-							<i class="right triangle icon"></i>Bike
-						</a>
-						<a class="item" href="https://sketchfab.com/models/2252074086884ec2bd3f50c024719a11">
-							<i class="right triangle icon"></i>Destroyer
-						</a>
-						<a class="item" href="https://sketchfab.com/models/3f0d135291f84eb3a56b6857b67c9c6d">
-							<i class="right triangle icon"></i>Gunship
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="ui card">
-				<a class="image" href="https://youtu.be/grXkzisSEM4?t=3963">
-					<img src="assets/draft/raptor.jpg">
-				</a>
-				<div class="content">
-					<div class="header">Raptor: Call of the Shadows</div>
-					<div class="description">Art style, ship designs and particles</div>
-				</div>
-			</div>
-			<div class="ui card">
-				<a class="image" href="https://youtu.be/Cv1Y0QdcXxw?t=5908">
-					<img src="assets/draft/ugh.jpg">
-				</a>
-				<div class="content">
-					<div class="header">UGH!</div>
-					<div class="description">Great fluid pixel art animations</div>
-				</div>
-			</div>
-			<div class="ui card">
-				<a class="image" href="https://www.youtube.com/watch?v=BxAdOQtAFEs">
-					<img src="assets/draft/total_annihilation.jpg">
-				</a>
-				<div class="content">
-					<div class="header">Total Annihilation</div>
-					<div class="description">Classic. Simple low poly models</div>
-				</div>
-			</div>
-			<div class="ui card">
-				<a class="image" href="https://youtu.be/Ss6B9PLZYVo?t=507">
-					<img src="assets/draft/skyforce.jpg">
-				</a>
-				<div class="content">
-					<div class="header">Skyforce</div>
-					<div class="description">Mobile beauty</div>
-				</div>
-			</div>
-			<div class="ui card">
-				<a class="image" href="https://youtu.be/3tmDyoJGRag?t=29">
-					<img src="assets/draft/rive.jpg">
-				</a>
-				<div class="content">
-					<div class="header">RIVE</div>
-					<div class="description">Simple 2D particles</div>
-				</div>
-			</div>
-			<div class="ui card">
-				<a class="image" href="https://www.youtube.com/watch?v=lQ6BZo1rKNo">
-					<img src="assets/draft/unity_assets.jpg">
-				</a>
-				<div class="content">
-					<div class="header">Unity</div>
-					<div class="description">Nice particle textures</div>
-				</div>
-			</div>
-			<div class="ui card">
-				<a class="image" href="assets/third_party/moo.html">
-					<img src="assets/draft/master_of_orion.gif">
-				</a>
-				<div class="content">
-					<div class="header">Master of Orion</div>
-					<div class="description">Ship designes diversity</div>
-				</div>
+		</div>
+		<div class="ui card">
+			<a class="image" href="https://youtu.be/grXkzisSEM4?t=3963">
+				<img src="assets/draft/raptor.jpg">
+			</a>
+			<div class="content">
+				<div class="header">Raptor: Call of the Shadows</div>
+				<div class="description">Art style, ship designs and particles</div>
 			</div>
 		</div>
-		<h2 class="ui dividing header">Techniques</h2>
-		<div class="ui cards">
-			<div class="ui card">
-				<a class="image" href="assets/third_party/explosion.html">
-					<img src="assets/third_party/explosion_files/fig1.png">
-				</a>
-				<div class="content">
-					<div class="header">Explosions</div>
-					<div class="description">Detailed article on how to make explosions</div>
-				</div>
+		<div class="ui card">
+			<a class="image" href="https://youtu.be/Cv1Y0QdcXxw?t=5908">
+				<img src="assets/draft/ugh.jpg">
+			</a>
+			<div class="content">
+				<div class="header">UGH!</div>
+				<div class="description">Great fluid pixel art animations</div>
 			</div>
-			<div class="ui card">
-				<a class="image" href="http://labs.gooengine.com/pearl-boy/index.html#">
-					<img src="assets/draft/water.jpg">
-				</a>
-				<div class="content">
-					<div class="ui list">
-						<div class="item">
-							<i class="right triangle icon"></i>
-							<div class="content">
-								<a class="header" href="assets/third_party/water.html">Tutorial</a>
-								<div class="description">Implementation details</div>
-							</div>
+		</div>
+		<div class="ui card">
+			<a class="image" href="https://www.youtube.com/watch?v=BxAdOQtAFEs">
+				<img src="assets/draft/total_annihilation.jpg">
+			</a>
+			<div class="content">
+				<div class="header">Total Annihilation</div>
+				<div class="description">Classic. Simple low poly models</div>
+			</div>
+		</div>
+		<div class="ui card">
+			<a class="image" href="https://youtu.be/Ss6B9PLZYVo?t=507">
+				<img src="assets/draft/skyforce.jpg">
+			</a>
+			<div class="content">
+				<div class="header">Skyforce</div>
+				<div class="description">Mobile beauty</div>
+			</div>
+		</div>
+		<div class="ui card">
+			<a class="image" href="https://youtu.be/3tmDyoJGRag?t=29">
+				<img src="assets/draft/rive.jpg">
+			</a>
+			<div class="content">
+				<div class="header">RIVE</div>
+				<div class="description">Simple 2D particles</div>
+			</div>
+		</div>
+		<div class="ui card">
+			<a class="image" href="https://www.youtube.com/watch?v=lQ6BZo1rKNo">
+				<img src="assets/draft/unity_assets.jpg">
+			</a>
+			<div class="content">
+				<div class="header">Unity</div>
+				<div class="description">Nice particle textures</div>
+			</div>
+		</div>
+		<div class="ui card">
+			<a class="image" href="assets/third_party/moo.html">
+				<img src="assets/draft/master_of_orion.gif">
+			</a>
+			<div class="content">
+				<div class="header">Master of Orion</div>
+				<div class="description">Ship designes diversity</div>
+			</div>
+		</div>
+	</div>
+	<h2 class="ui horizontal divider header">
+		<i class="tag icon"></i>
+		Techniques
+	</h2>
+	<div class="ui cards">
+		<div class="ui card">
+			<a class="image" href="assets/third_party/explosion.html">
+				<img src="assets/third_party/explosion_files/fig1.png">
+			</a>
+			<div class="content">
+				<div class="header">Explosions</div>
+				<div class="description">Detailed article on how to make explosions</div>
+			</div>
+		</div>
+		<div class="ui card">
+			<a class="image" href="http://labs.gooengine.com/pearl-boy/index.html#">
+				<img src="assets/draft/water.jpg">
+			</a>
+			<div class="content">
+				<div class="ui list">
+					<div class="item">
+						<i class="right triangle icon"></i>
+						<div class="content">
+							<a class="header" href="assets/third_party/water.html">Tutorial</a>
+							<div class="description">Implementation details</div>
 						</div>
 					</div>
 				</div>
