--- a/index.html
+++ b/index.html
@@ -22,5 +22,13 @@
 			<i class="big red share icon"></i>
 			Apk
 		</a>
+		<a class="item" href="other_concepts.html">
+			<i class="blue idea icon"></i>
+			Concepts
+		</a>
+		<a class="item" href="glsl/e.html">
+			<i class="big cubes icon"></i>
+			GLSL playground
+		</a>
 	</div>
 </body>
