--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-	<link rel="import" href="include.html">
+	<link rel="import" href="import.html">
 	<link rel="stylesheet" href="import.css"/>
 </head>
 <body>
@@ -29,6 +29,11 @@
 		<a class="item" href="glsl/e.html">
 			<i class="big cubes icon"></i>
 			GLSL playground
+		</a>
+		<a class="item" href="mtg.html">
+			<img class="ui centered tiny image" src="http://gatherer.wizards.com/Handlers/Image.ashx?type=card&multiverseid=8327"></img>
+			<div class="ui clearing divider"></div>
+			Me about MtG
 		</a>
 	</div>
 </body>
