--- a/mtg.html
+++ b/mtg.html
@@ -1,15 +1,15 @@
+<!DOCTYPE html>
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="import" href="import.html">
+	<script src="common.js"></script>
 	<link rel="stylesheet" href="import.css" />
 	<link rel="stylesheet" href="mtg.css" />
+	<script src="mtg/main.js"></script>
+	<script>
+		$(DOM_ready); // .ready(handler)
+	</script>
 </head>
-<script src="mtg/main.js"></script>
-<script>
-	$(DOM_ready); // .ready(handler)
-</script>
-
 <body>
 
 	<div class="ui attached stackable inverted menu">
