--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-	<link rel="import" href="include.html">
+	<script src="common.js"></script>
 	<link rel="stylesheet" href="import.css"/>
 </head>
 <body>
