load id names map

--- a/mtg.html
+++ b/mtg.html
@@ -15,7 +15,7 @@
 	<div class="ui attached stackable inverted menu">
 		<div class="ui container">
 			<a class="item">
-				<i class="home icon"></i>TODO: add names from source
+				<i class="home icon"></i>Done!
 			</a>
 			<a class="item">
 				<i class="grid layout icon"></i>TODO: colored tags
