wants image grid

--- a/mtg.html
+++ b/mtg.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" href="mtg.css" />
 	<script src="mtg/main.js"></script>
 	<script>
-		$(DOM_ready_results); // .ready(handler)
+		$(DOM_ready_wants);
+		// $(DOM_ready_results); // .ready(handler)
 		// $(DOM_ready);
 	</script>
 </head>
