more cards visible + decklist

--- a/mtg.html
+++ b/mtg.html
@@ -55,8 +55,10 @@
 			</div>
 		</div>
 	</div>
-
 	<div id="message_box" class="card_tag_inner transparent_box">?</div>
 	<div id="card_tags_container"></div>
 	<div id="main_content" class="ui"></div>
+	<div class="ui segment">
+		<pre id="deck"></pre>
+	</div>
 </body>
