unfinished better list loading

--- a/mtg.html
+++ b/mtg.html
@@ -61,7 +61,6 @@
 			</div>
 		</div>
 	</div>
-	<div id="message_box" class="card_tag_inner transparent_box">?</div>
 	<div id="card_tags_container"></div>
 	<div id="main_content" class="ui"></div>
 	<div class="ui segment" id="deck_segment">
@@ -76,4 +75,6 @@
 		</button>
 		<pre id="json_text"></pre>
 	</div>
+	<div id="hidden_cards"></div>
+	<div id="message_box" class="card_tag_inner transparent_box opacity-transition">?</div>
 </body>
