--- a/other_concepts.html
+++ b/other_concepts.html
@@ -2,6 +2,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<script src="common.js"></script>
 	<link rel="stylesheet" href="import.css" />
+	<link rel="stylesheet" href="mtg.css" />
 </head>
 <body>
 	<h1 class="ui center aligned header">
