--- a/mtg.html
+++ b/mtg.html
@@ -22,28 +22,29 @@
 			<a href="#json_segment" class="item">
 				<i class="angle down icon"></i>JSON
 			</a>
-			<a class="item">
-				<i class="home icon"></i>TODO: id to name as one request
-			</a>
-			<a class="item">
-				<i class="grid layout icon"></i>TODO: colored tags
-			</a>
-			<a class="item">
-				<i class="mail icon"></i>TODO: calculate middle divider
-			</a>
 			<div class="ui simple dropdown item">
+				<i class="chess icon"></i>
+				Commander
+				<i class="dropdown icon"></i>
+				<div class="menu" id="commander_decks_menu"></div>
+			</div>
+			<div class="ui simple dropdown item">
+				<i class="grid layout icon"></i>
 				TODO
 				<i class="dropdown icon"></i>
 				<div class="menu">
-					<a class="item">
-						<i class="edit icon"></i>TODO</a>
-					<a class="item">
-						<i class="globe icon"></i>TODO</a>
-					<a class="item">
-						<i class="settings icon"></i>TODO</a>
+					<div class="item">
+						<i class="home icon"></i>id to name as one request
+					</div>
+					<div class="item">
+						<i class="grid layout icon"></i>whole tags thing needs a lot of work
+					</div>
+					<div class="item">
+						<i class="settings icon"></i>calculate middle divider in articles (make them usable)
+					</div>
 				</div>
 			</div>
-			<div class="right item">
+			<div class="item">
 				<!-- <div class="ui input">
 					<input type="text" placeholder="TODO filters">
 				</div> -->
@@ -64,26 +65,6 @@
 	</div>
 
 	<div id="card_tags_container"></div>
-	
-		<!-- <div class="ui horizontal fitted divider header">
-			<i class="file icon"></i>
-			<div class="content">
-				Account Settings
-				<div class="sub header">Manage your preferences</div>
-			</div>
-			<i class="settings green icon"></i>
-			<div class="content">2 + 99</div>
-			<div class="content">&bull;</div>
-			<i class="exchange icon"></i>
-			<div class="content">16</div>
-			<div class="content">&VerticalLine;</div>
-			&VerticalLine;
-			<i class="cart plus icon"></i>
-			<div class="content">
-				32
-				<div class="sub header">Manage your preferences</div>
-			</div>
-		</div> -->
 	<div class="ui attached stackable seven menu">
 		<div class="ui container">
 			<a href="#main_content" class="item">
