--- a/mtg.html
+++ b/mtg.html
@@ -65,24 +65,8 @@
 	</div>
 
 	<div id="card_tags_container"></div>
-	<div class="ui attached stackable seven menu">
-		<div class="ui container">
-			<a href="#main_content" class="item">
-				<i class="file icon"></i>
-				Main
-				<div class="ui left pointing basic label" id="deck_menu_main">0 + 00</div>
-			</a>
-			<a href="#sideboard_content" class="item">
-				<i class="exchange icon"></i>
-				Sideboard
-				<div class="ui left pointing blue basic label" id="deck_menu_sideboard">0</div>
-			</a>
-			<a href="#wants_content" class="item">
-				<i class="cart plus icon"></i>
-				Wants
-				<div class="ui left pointing blue basic label" id="deck_menu_wants">0</div>
-			</a>
-		</div>
+	<div class="ui attached stackable menu">
+		<div id="deck_subsection_menu" class="ui container"></div>
 	</div>
 
 	<div id="main_content" class="ui"></div>
